--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 POST = 8000
 URI_DB = 'mongodb+srv://nghinguyenzero:admin%401a2b3c@clusterzero.1pcv2up.mongodb.net/zero_store'
+SECRET_CODE='nghinguyenzero'
