--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon .src/server.js"
+    "start": "nodemon --experimental-specifier-resolution=node ./src/server.js"
   },
   "author": "nghinguyenzero",
   "license": "ISC",
@@ -14,9 +14,11 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0"
   }
 }
