--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "mongoose-paginate-v2": "^1.8.0"
   }
 }
