--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "nghinguyenzero",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "nodemon": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
