--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "author": "nghinguyenzero",
   "license": "ISC",
-  "devDependencies": {
-  },
   "dependencies": {
-    "nodemon": "^3.1.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.21.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "mongoose-paginate-v2": "^1.8.0"
+    "mongoose-paginate-v2": "^1.8.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.0"
   }
 }
