--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
-  }
+    "version" : 2,
+    "builds": [{"src": "src/index.js", "use": "@vercel/node"}],
+    "routes": [{"src": "/(.*)", "dest": "/"}]
+}
