--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "builds": [
+    {
+      "src": "package.json", 
+      "use": "vercel-sapper"
+    }
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --experimental-specifier-resolution=node ./index.js"
