--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,24 @@
+
 {
-    "version" : 2,
-    "builds": [{"src": "./index.js", "use": "@vercel/node"}],
-    "rewrites": [{"source": "/(.*)", "destination": "./index.js"}]
+    "version": 2,
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "vercel-sapper"
+        },
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "index.js",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
+        }
+    ]
 }
