--- a/vercel.json
+++ b/vercel.json
@@ -20,5 +20,7 @@
                 "Access-Control-Allow-Origin": "*"
             }
         }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
+
 }
