--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,14 @@
-
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "vercel-sapper"
-        },
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin": "*"
-            }
-        }
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
-
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
