--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,15 @@
     "version": 2,
     "builds": [
         {
-            "src": "package.json",
+            "src": "index.js",
             "use": "@vercel/node"
         }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
+
 }
