--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-specifier-resolution=node ./index.js"
+    "dev": "nodemon index.js",
+    "start": "nodemon --experimental-specifier-resolution=node index.js"
   },
   "author": "nghinguyenzero",
   "license": "ISC",
