--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "nodemon --experimental-specifier-resolution=node index.js"
+    "start": "npm run  node index.js"
   },
   "author": "nghinguyenzero",
   "license": "ISC",
