--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "npm run  node index.js"
+    "start": "nodemon --experimental-specifier-resolution=node index.js"
   },
   "author": "nghinguyenzero",
   "license": "ISC",
