--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
             "dest": "/"
         }
     ],
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
     
 
 }
