--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,5 @@
             "use": "@vercel/node"
         }
     ],
-    "routers": [{ "source": "/(.*)", "dest": "/" }]
+    "routes": [{ "source": "/(.*)", "dest": "/" }]
 }
